[package]
name = "jack_fourier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = "0.10.0"
itertools = "0.10.3"
vizia = {git = "https://github.com/vizia/vizia"}
femtovg = { version = "0.3.0", default-features = false, features = ["image-loading"] }
rustfft = "6.0.1"
ringbuf = "0.2.8"
image = "0.24.2"